# HumAL

./: .env.example  .gitignore  LICENSE  README.md  SETUP.md  docker-compose-bnd-fnd-rmq.yml  docker-compose-bnd-fnd.yml  docker-compose-bnd-rmq.yml  docker-compose.yml  install.py  requirements.txt  start-dev.bat  start-dev.sh
app/: main.py
app/config/: config.py
app/data_models/: active_learning_dm.py
app/routers/: active_learning_router.py
backend/: .dockerignore  Dockerfile  MODEL_SETUP.md  README.md  download_models.py  requirements.txt
backend/app/: main.py
backend/app/config/: config.py  resolution_config.py
backend/app/core/: dependencies.py  minio_client.py  rabbitmq_client.py  rag_system.py  storage.py
backend/app/data_models/: active_learning_dm.py  analytics_dm.py  resolution_dm.py
backend/app/persistence/: __init__.py  local_artifacts.py  minio_storage.py
backend/app/routers/: active_learning_router.py  (+7 more)
backend/benchmarking_suite/: smart_ticketing_env.json  smart_ticketing_env.suggested.patched.json
backend/humal_vectorizer/: __init__.py  ticket_vectorizer.py
backend/tests/: manual_minio_check.py  test_timestamp_type.py
docs/: API.md  ARCHITECTURE.md  BACKEND_TODO.md  DEPLOYMENT.md  DEVELOPMENT.md  ENDPOINT_CHANGELOG.md  README.md  USER_GUIDE.md
frontend/: .dockerignore  Dockerfile  README.md  bun.lockb  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
frontend-vue/: README.md  index.html  package-lock.json  package.json
frontend-vue/src/: App.vue  main.ts
frontend/src/: App.tsx  App.vue  index.css
humal-analytics/: README.md  pyproject.toml  requirements.txt
humal-analytics/humal_analytics/: __init__.py  charts.py  client.py  metrics.py  models.py
(+142 files in other folders)
